# bluecherry-apps

./: .gitignore  .gitmodules  BCMK.conf  CRASH_RECOVERY_FIXES.md  CRITICAL_FIX_3.1.14.md  Makefile  README  README.md  bc-reader.c  bc.cgi.c  bluecherry-api  bluecherry-node-onvif  buildreleases  buildreleases.sh  clear_rrd_data.sh  debug_trigger_test.sh  fix_vehicle_events.sh  getjpeg.c  licensing-remove.md  mk.conf  onvif-service  postinstall.sh  readthedocs.yml  start-records.sh  test_stats_api.php  test_storage.cpp  test_vehicle_trigger.sh
.github/: dependabot.yml
.kilocode/: api.yaml  config.yaml  database.yaml  naming.yaml  preferences.yaml  security.yaml
actions/: Dockerfile  bc-database-create.sh  bc-database-upgrade.sh  bc-rsyslog.conf  entrypoint.sh  patch-bluecherry-deb.sh  supervisord.conf
client/: README.txt  client.pro
debian/: apache.conf  apache.conf_rpm  bluecherry-client.install  bluecherry.apparmor  bluecherry.bluecherry.upstart  bluecherry.conf.in  bluecherry.config  bluecherry.cron  bluecherry.dirs  bluecherry.init  bluecherry.install  bluecherry.logrotate  bluecherry.monit  bluecherry.postinst  bluecherry.postrm  bluecherry.preinst  bluecherry.preinst.template  bluecherry.prerm  bluecherry.service  bluecherry.udev  bluecherry.upstart  bluecherry.upstart.tmp  bluecherrydvr.postinst  bluecherrydvr.postrm  bluecherrydvr.preinst  changelog  control  control.in  copyright  onvif.service  rules  templates
docs/: Makefile  README  client.rst  conf.py  development.rst  index.rst  make.bat  onvif_event_types.md  (+3 more)
lib/libcurl/lib/: Makefile.am  Makefile.in  Makefile.vc10  Makefile.vc8  Makefile.vc9  curl_config.h.in  http.c  http.h  libcurl.plist  rtsp.c
(+1351 files in other folders)
